<resources>
  <string name="app_name">The Office Club</string>
  <string name="app_description">Надежная облачная система управления человеческими ресурсами, которая позволит вашему отделу кадров работать с меньшим количеством хлопот и бумажной работы.</string>
  <string name="registration_organization">Зарегистрировать организацию</string>
  <string name="auth">Авторизоваться</string>
  <string name="welcome_text">Для использования сервиса необходимо авторизоваться или зарегистрировать новую организацию</string>
  <string name="login">Войти</string>
  <string name="email">Почта</string>
  <string name="password">Пароль</string>
  <string name="is_no_email">Не является адресом электронной почты</string>
  <string name="is_require">Обязательное поле</string>
  <string name="short_error">Минимальная длина не достигнута</string>
  <string name="registation_organization_title">Регистрация организации</string>
  <string name="fillName">Наименование</string>
  <string name="shortName">Краткое наименование</string>
  <string name="nameOfOrganizationHead">ФИО руководителя организации</string>
  <string name="nameOfHumanResourcesDepartmentHead">ФИО руководителя отдела кадров</string>
  <string name="general_info">Общая информация</string>
  <string name="address">Адрес</string>
  <string name="city">Город</string>
  <string name="street">Улица</string>
  <string name="house">Дом</string>
  <string name="building">Корпус</string>
  <string name="postCode">Почтовый индекс</string>
  <string name="auth_data">Авторизационные данные</string>
  <string name="weak_password">Слабый пароль</string>
  <string name="user_collision">Почта занята</string>
  <string name="network_error">Проблемы с интернетом</string>
  <string name="unknown_error">Неизвестная ошибка</string>
  <string name="invalid_email_password">Неверный почта или пароль</string>
  <string name="organization_head">Руководитель организации</string>
  <string name="organization_head_email">Почта руководителя</string>
  <string name="organization_head_password">Пароль руководителя</string>
  <string name="human_resources_department_head">Руководитель отдела кадров</string>
  <string name="humanResourcesDepartment_email">Почта руководителя отдела кадров</string>
  <string name="email_of_heads_is_equal">Почтовые адреса руководителей должны быть различными</string>
  <string name="no_uniq_organization_head_email">Неуникальный почтовый адрес руководителя организации</string>
  <string name="no_uniq_HRDH_email">Неуникальный почтовый адрес руководителя отдела кадров</string>
  <string name="error">Упс...</string>
  <string name="continue_text">Продолжить</string>
  <string name="exit_title">Выход</string>
  <string name="exit_message">Вы уверены что хотите выйти из аккаунта?</string>
  <string name="cancel">Отмена</string>
  <string name="about_organization">Об организации</string>
  <string name="employees">Сотрудники</string>
  <string name="divisions">Подразделения</string>
  <string name="document">Документы</string>
  <string name="editors">Редакторы</string>
  <string name="save_organization_title">Сохранение изменений</string>
  <string name="save_organization_message">Вы уверены, что хотите сохранить изменений? Это действие отменить будет нельзя</string>
  <string name="create_division_title">Создание подразделения</string>
  <string name="create_division_message">Для создания подразделения необходимо задать его название</string>
  <string name="get_vacation_message">Для предоставления отпуска необходимо заполнить форму</string>
  <string name="dismissal_employer_message">Для увольнения сотрудника необходимо заполнить форму</string>
  <string name="get_gift_message">Для поощрения сотрудника необходимо заполнить форму</string>
  <string name="transfer_employer">Перевод сотрудника</string>
  <string name="transfer_employer_message">Для перевода сотрудника необходимо заполнить форму</string>
  <string name="get_gift">Поощрение сотрудника</string>
  <string name="name">Наименование</string>
  <string name="currentWork">Текущее место работы: %1$s (%2$s, оклад: %3$.2f₽, надбавка: %4$.2f₽)</string>
  <string name="tempWork">Временно занимает должность %1$s с окладом %2$.2f₽ и премией %3$.2f₽ в подразделении %4$s (c %5$s по %6$s)</string>
  <string name="layoutSalary">Оклад</string>
  <string name="dW">%1$d</string>
  <string name="count_of_employees">Сотрудников: %1$s</string>
  <string name="divisions_no_found">Подразделения не найдены</string>
  <string name="search_hint">Поиск</string>
  <string name="delete">Удалить</string>
  <string name="delete_division_title">Удаление подразделения</string>
  <string name="delete_division_message">Вы уверены что хотите удалить подразделения \"%1$s\"? Будут удалены так же сведения о сотрудниках этого подразделения</string>
  <string name="registation_editor">Регистрация редактора</string>
  <string name="registration_editor_description">Для регистрации редактора необходимо заполнить следующую форму</string>
  <string name="nameOfEditor">ФИО редактора</string>
  <string name="editor_added_hint">Вы больше не сможете увидеть авторизационные данные - сохраните их. Нажмите на них, чтобы скопировать в буфер обмена</string>
  <string name="error_title">Упс…</string>
  <string name="editor_added">Редактор зарегистрирован</string>
  <string name="editor_auth_data">Новый редактор зарегистрирован!\n\nАвторизационные данные:\nПочта: %1$s\nПароль:%2$s</string>
  <string name="data_copied">Данные скопированы!</string>
  <string name="editor">Редактор</string>
  <string name="youAuthedAs">Вы вошли как %1$s</string>
  <string name="editor_no_found">Редакторы не найдены</string>
  <string name="blocking_editor_title">Блокировка редактора</string>
  <string name="unblocking_editor_title">Разблокировка редактора</string>
  <string name="blocking_editor_message">Вы уверены что хотите заблокировать редактора \"%1$s\"?</string>
  <string name="unblocking_editor_message">Вы уверены что хотите разблокировать редактора \"%1$s\"?</string>
  <string name="unblock">Разблокировать</string>
  <string name="block">Заблокировать</string>
  <string name="account_have_been_blocked">Аккаунт заблокирован</string>
  <string name="account_have_been_blocked_message_with_exit">Ваш аккаунт был заблокирован! Обратитесь к руководителю орагнизации или руководителю отдела кадров. Чтобы выйти из аккаунта нажмите на кнопку ниже</string>
  <string name="account_have_been_blocked_message">Ваш аккаунт был заблокирован! Обратитесь к руководителю орагнизации или руководителю отдела кадров.</string>
  <string name="change_head_message">Для переназначения выберите нового руководителя из списка НЕЗАБЛОКИРОВАНЫХ редакторов.\nПосле переназначения текущий руководитель становится редактором</string>
  <string name="change_hrd_head_title">Переназначение руководителя отдела кадров</string>
  <string name="change_org_head_title">Переназначение руководителя организации</string>
  <string name="youCantChangeHeader">Вы не можете переназначить руководителя</string>
  <string name="create_organization_position">Добавление должности</string>
  <string name="create_organization_position_description">Для добавления дожности необходимо задать название и сумму оклада</string>
  <string name="createOrganizationPosition">Добавить должность</string>
  <string name="salary">%1$s - %2$.2f₽</string>
  <string name="positionChange">%1$s - %2$.2f₽ -> %3$s - %4$.2f₽</string>
  <string name="organization_positions_empty">Должности не найдены</string>
  <string name="search_position_hint">Поиск по должностям</string>
  <string name="delete_position_title">Удаление должности</string>
  <string name="delete_position_message">Вы уверены, что хотите удалить должность \"%1$s\" с окладом %2$.2f₽</string>
  <string name="foundEmployeesWithThisPosition">Были найдены сотрудники с такой должностью. Мы не можем удалить должность…</string>
  <string name="add_employer">Добавление сотрудника</string>
  <string name="add_employer_message">Для добавления сотрудника необходимо заполнить форму ниже</string>
  <string name="division">Подразделение</string>
  <string name="divisionItem">Подразделение: %1$s</string>
  <string name="position">Должность</string>
  <string name="positionItem">Должность: %1$s</string>
  <string name="premium">Надбавка</string>
  <string name="employer_name">ФИО</string>
  <string name="trialPeriod">Испытательный срок</string>
  <string name="contractData">Дата составления трудового договора</string>
  <string name="work_contract">Трудовой договор</string>
  <string name="contractNumber">Номер</string>
  <string name="workPeriod">Принят на работу с/по</string>
  <string name="orgOKPO">Код по ОКПО</string>
  <string name="permission_deny">Отказ в разрешении</string>
  <string name="permission_create_documeny_message">Для работы с файловой системой необходимо предоставить доступ у чтению и записи.</string>
  <string name="jun">января</string>
  <string name="feb">февраля</string>
  <string name="march">марта</string>
  <string name="apr">апреля</string>
  <string name="may">мая</string>
  <string name="june">июня</string>
  <string name="jule">июля</string>
  <string name="aug">августа</string>
  <string name="sep">сентября</string>
  <string name="oct">октября</string>
  <string name="nov">ноября</string>
  <string name="dec">декабря</string>
  <string name="back">Назад</string>
  <string name="general_information">Общая информация</string>
  <string name="education">Образование</string>
  <string name="family">Семейное положение</string>
  <string name="military">Воинский учет</string>
  <string name="exp">Стаж работы</string>
  <string name="inn">ИНН</string>
  <string name="snils">СНИЛС</string>
  <string name="fillNameEmployer">ФИО</string>
  <string name="gender">Пол</string>
  <string name="man">Мужской</string>
  <string name="woman">Женский</string>
  <string name="birthday">Дата рождения</string>
  <string name="birthplace">Место рождения</string>
  <string name="сitizenship">Гражданство</string>
  <string name="phoneNumber">Номер телефона</string>
  <string name="addrByPass">Место жительства по паспорту</string>
  <string name="addrInFact">Фактическое место жительства</string>
  <string name="addrByPassPostCode">Почтовый индекс</string>
  <string name="passportNumber">Номер паспорта</string>
  <string name="passportSerial">Серия паспорта</string>
  <string name="passportDate">Дата выдачи</string>
  <string name="passportOrganization">Кем выдан</string>
  <string name="okato">ОКАТО</string>
  <string name="byOKIN">по ОКИН</string>
  <string name="dateOfRegAccorinigAddress">Дата регистрации</string>
  <string name="firstLangName">Наименование</string>
  <string name="firstLang">Первый иностранный язык</string>
  <string name="langLevel">Уровень знания</string>
  <string name="secondLang">Второй иностранный язык</string>
  <string name="militaryReg">Сведения о воинском учете</string>
  <string name="reserveСategory">Категория запаса</string>
  <string name="rank">Звание</string>
  <string name="profile">Состав (профиль)</string>
  <string name="codeVUS">Обозначение ВУС</string>
  <string name="category">Категория годности</string>
  <string name="militaryName">Военный комиссариат</string>
  <string name="militaryRegistryGeneral">Общий воинский учет</string>
  <string name="militaryRegistrySpec">Специальный воинский учет</string>
  <string name="markOfDeregistration">Отметка о снятии с учета</string>
  <string name="employerTableNumber">№ %1$s</string>
  <string name="data_no_found">Данные не найдены</string>
  <string name="gift_description">Мотив поощрения</string>
  <string name="gift_type">Вид поощрения</string>
  <string name="gift_sum">Сумма поощрения</string>
  <string name="gift_reason">Основание</string>
  <string name="salaryItem">Тарифная ставка (оклад): %1$s</string>
  <string name="premiumItem">Надбавка(общая сумма): %1$s</string>
  <string name="totalMonth">Итого в месяц: %1$s</string>
  <string name="vacations">Отпуска:</string>
</resources>