<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>
    <import type="android.view.View" />

    <variable
      name="t7Row"
      type="com.elka.heofficeclub.other.T7Row" />
  </data>

  <LinearLayout
    android:paddingHorizontal="@dimen/add_padding"
    android:paddingVertical="10dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
      style="@style/text"
      tools:text="@string/divisionItem"
      android:text="@{@string/divisionItem(t7Row.division)}" />

    <TextView
      style="@style/text"
      tools:text="@string/positionItem"
      android:text="@{@string/positionItem(t7Row.position)}" />

    <TextView
      style="@style/text"
      tools:text="@string/employerTableNumber"
      android:text="@{@string/employerTableNumber(t7Row.fullName, t7Row.tableNumber)}" />


    <TextView
      android:layout_marginTop="10dp"
      style="@style/text"
      android:textStyle="bold"
      android:text="@string/vacations"/>

    <TextView
      style="@style/text.attention"
      android:layout_marginTop="3dp"
      android:visibility="@{t7Row.vacations.size() == 0 ? View.VISIBLE : View.GONE}"
      android:text="@string/data_no_found" />

    <androidx.recyclerview.widget.RecyclerView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      tools:listitem="@layout/t7_item_vacation"
      android:id="@+id/list"
      android:overScrollMode="never"
      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
  </LinearLayout>
</layout>