<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <variable
      name="viewModel"
      type="com.elka.heofficeclub.viewModel.EmployerViewModel" />

    <variable
      name="master"
      type="com.elka.heofficeclub.view.ui.employerScreen.EmployerMilitaryRegistrationFragment" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dialog"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="20dp">

    <LinearLayout
      android:id="@+id/header"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintTop_toTopOf="parent">


      <TextView
        android:id="@+id/title"
        style="@style/text.h3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:gravity="start"
        android:textStyle="bold"
        android:text="@string/military" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      app:layout_constraintBottom_toTopOf="@id/button"
      app:layout_constraintTop_toBottomOf="@id/header">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
          style="@style/text.h3"
          android:layout_marginBottom="15dp"
          android:text="@string/militaryReg" />

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/layoutReserveСategory"
          style="@style/FieldWrapper"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/reserveСategory">

          <com.google.android.material.textfield.TextInputEditText
            style="@style/FieldContent"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:text="@={viewModel.reserveСategory}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/layoutRank"
          style="@style/FieldWrapper"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/rank">

          <com.google.android.material.textfield.TextInputEditText
            style="@style/FieldContent"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:text="@={viewModel.rank}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/layoutProfile"
          style="@style/FieldWrapper"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/profile">

          <com.google.android.material.textfield.TextInputEditText
            style="@style/FieldContent"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:text="@={viewModel.profile}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/layoutCodeVUS"
          style="@style/FieldWrapper"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/codeVUS">

          <com.google.android.material.textfield.TextInputEditText
            style="@style/FieldContent"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:text="@={viewModel.codeVUS}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/layoutCategory"
          style="@style/FieldWrapper"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/category">

          <com.google.android.material.textfield.TextInputEditText
            style="@style/FieldContent"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:text="@={viewModel.category}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/layoutMilitaryName"
          style="@style/FieldWrapper"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/militaryName">

          <com.google.android.material.textfield.TextInputEditText
            style="@style/FieldContent"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:text="@={viewModel.militaryName}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/layoutMilitaryRegistryGeneral"
          style="@style/FieldWrapper"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/militaryRegistryGeneral">

          <com.google.android.material.textfield.TextInputEditText
            style="@style/FieldContent"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:text="@={viewModel.militaryRegistryGeneral}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/layoutMilitaryRegistrySpec"
          style="@style/FieldWrapper"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/militaryRegistrySpec">

          <com.google.android.material.textfield.TextInputEditText
            style="@style/FieldContent"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:text="@={viewModel.militaryRegistrySpec}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/layoutMarkOfDeregistration"
          style="@style/FieldWrapper"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/markOfDeregistration">

          <com.google.android.material.textfield.TextInputEditText
            style="@style/FieldContent"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:text="@={viewModel.markOfDeregistration}" />
        </com.google.android.material.textfield.TextInputLayout>
      </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
      android:id="@+id/button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:layout_marginBottom="25dp"
      android:gravity="end"
      android:orientation="horizontal"
      app:layout_constraintBottom_toBottomOf="parent">

      <TextView
        style="@style/text.bold.button"
        android:layout_width="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bubble_wrapper"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="@{() -> master.goBack()}"
        android:text="@string/back" />

      <TextView
        android:id="@+id/btnContinue"
        style="@style/text.bold.button"
        android:layout_width="wrap_content"
        android:background="@drawable/bubble_wrapper"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="@{() -> master.goNext()}"
        android:text="@string/continue_text" />

    </LinearLayout>
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>