<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <import type="android.view.View" />

    <variable
      name="master"
      type="com.elka.heofficeclub.view.dialog.GetGiftDialog" />

    <variable
      name="viewModel"
      type="com.elka.heofficeclub.viewModel.GetGiftViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="25dp">

    <LinearLayout
      android:id="@+id/form"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/bg_dialog"
      android:gravity="center"
      android:orientation="vertical"
      android:paddingHorizontal="20dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <TextView
        style="@style/text.h3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="start"
        android:text="@string/get_gift"
        android:textStyle="bold" />

      <TextView
        style="@style/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/get_gift_message" />

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutGiftDescription"
        style="@style/FieldWrapper"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gift_description">

        <com.google.android.material.textfield.TextInputEditText
          style="@style/FieldContent"
          android:imeOptions="actionNext"
          android:inputType="text"
          android:lines="1"
          android:maxLines="1"
          android:text="@={viewModel.giftDescription}" />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutGiftType"
        style="@style/FieldWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gift_type">

        <com.google.android.material.textfield.TextInputEditText
          style="@style/FieldContent"
          android:imeOptions="actionNext"
          android:inputType="text"
          android:lines="1"
          android:maxLines="1"
          android:text="@={viewModel.giftType}" />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutGiftReason"
        style="@style/FieldWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gift_reason">

        <com.google.android.material.textfield.TextInputEditText
          style="@style/FieldContent"
          android:imeOptions="actionNext"
          android:inputType="text"
          android:lines="1"
          android:maxLines="1"
          android:text="@={viewModel.giftReason}" />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutGiftSum"
        style="@style/FieldWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gift_sum">

        <com.google.android.material.textfield.TextInputEditText
          style="@style/FieldContent"
          android:imeOptions="actionNext"
          android:inputType="numberDecimal"
          android:lines="1"
          android:maxLines="1"
          android:text="@={viewModel.giftSum}" />

      </com.google.android.material.textfield.TextInputLayout>


      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="25dp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
          style="@style/text.bold.button"
          android:layout_width="wrap_content"
          android:layout_marginEnd="10dp"
          android:background="@drawable/bubble_wrapper"
          android:foreground="?android:attr/selectableItemBackground"
          android:onClick="@{() -> master.disagree()}"
          android:text="@string/cancel" />

        <TextView
          style="@style/text.bold.button"
          android:layout_width="wrap_content"
          android:background="@drawable/bubble_wrapper"
          android:foreground="?android:attr/selectableItemBackground"
          android:onClick="@{() -> master.agree()}"
          android:text="@string/continue_text" />

      </LinearLayout>


    </LinearLayout>

    <RelativeLayout
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:background="@color/shadow2"
      android:visibility="@{viewModel.work.size() == 0 ? View.GONE : View.VISIBLE}"
      app:layout_constraintBottom_toBottomOf="@id/form"
      app:layout_constraintEnd_toEndOf="@id/form"
      app:layout_constraintStart_toStartOf="@id/form"
      app:layout_constraintTop_toTopOf="@id/form"
      tools:visibility="gone">

      <ProgressBar
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/accent" />
    </RelativeLayout>
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>